fixed contact spacing

--- a/src/css/_contact.scss
+++ b/src/css/_contact.scss
@@ -49,6 +49,7 @@
 label {
     
     text-align: left;
+    margin: 10px 0px;
 }
 
 .inputSection {
