--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -75,6 +75,8 @@
 .projectText {
     color: $secondary;
     a {
+
+        
         text-decoration: none;
         font-weight: bold;
         margin: 0px 5px;
@@ -125,6 +127,8 @@
   color: $white;
   border: none;
   
+  margin-top: 20px;
+
   background: linear-gradient(127deg, rgba(248,138,125,1) 0%, rgba(201,112,102,1) 80%);
   text-decoration: none;
   font-size: 25px;
