--- a/src/css/main.css
+++ b/src/css/main.css
@@ -463,6 +463,7 @@
   text-align: center;
   color: #FCFDFF;
   border: none;
+  margin-top: 20px;
   background: linear-gradient(127deg, #f88a7d 0%, #c97066 80%);
   text-decoration: none;
   font-size: 25px;
@@ -733,6 +734,7 @@
 
 label {
   text-align: left;
+  margin: 10px 0px;
 }
 
 .inputSection {
